# cto

./: .dockerignore  .env.example  .gitignore  =60.0  CHANGES.md  CHANGES_SUMMARY.md  DEBUG_ENDPOINTS_GUIDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  test_fonts.py  verify_fonts.py
app/: main.py
app/api/: routes.py
app/core/: config.py
app/services/: converter.py
static/css/: styles.css
static/js/: app.js
templates/: index.html
tests/: test_api.py  test_center_alignment.py  test_converter.py  test_css_class_conversion.py  test_debug_endpoints.py
